[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/event_popup.gd" id="1_popup"]

[node name="EventPopup" type="PanelContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -180.0
offset_right = 200.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2
custom_minimum_size = Vector2(400, 300)
script = ExtResource("1_popup")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Event Title"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Separator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="FlavorText" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Event flavor text goes here. This describes the situation the player must respond to."
fit_content = true
scroll_active = false

[node name="ChoicesContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8
